--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "angular-mocks": "^1.4.1",
     "chai": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.11.0",
     "gulp-ng-annotate": "^1.0.0",
+    "gulp-sass": "^2.0.1",
+    "gulp-scss-lint": "^0.2.0",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
     "jshint-stylish": "^2.0.0",
     "karma": "^0.12.36",
@@ -22,5 +26,8 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "mocha": "^2.2.5",
     "phantomjs": "^1.9.17"
+  },
+  "dependencies": {
+    "angular": "^1.4.1"
   }
 }
